Refactoring annotation handling